# stock-app

./: README.md  build-apk.yml  gradle.properties  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml
