[project]
name = "stock-app"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "flet",
    "requests",
    "msgpack>=1.0.0",
    "repath",
    "websocket-client",
    "oauthlib",
    "packaging"
]

[tool.flet.dependencies]
# 全部需要打包进安卓APK的Python库完整列表
packages = [
    "flet",
    "requests",
    "msgpack>=1.0.0",
    "repath",
    "websocket-client",
    "oauthlib",
    "packaging"
]

[tool.flet.android.meta_data]
# 关闭Vulkan Impeller，解决白屏
"io.flutter.embedding.android.Renderer" = "skia"

[tool.flet.app]
# 主程序在项目根目录
path = "."
